# quiz-meetup

./: .gitignore  README.md  pyproject.toml  run.py  start_linux.sh  start_windows.bat  start_windows.ps1
src/quiz_meetup/: __main__.py  app.py  config.py  paths.py  resources.py
src/quiz_meetup/assets/: app.qss
src/quiz_meetup/database/: __init__.py  connection.py  migrations.py  schema.sql
src/quiz_meetup/models/: __init__.py  game.py  game_session.py  media_asset.py  question.py  round.py  score_entry.py  scoreboard_row.py  team.py
src/quiz_meetup/repositories/: __init__.py  game_repository.py  game_session_repository.py  media_repository.py  question_repository.py  round_repository.py  score_repository.py  settings_repository.py  team_repository.py
src/quiz_meetup/services/: __init__.py  game_service.py  game_session_service.py  media_service.py  presentation_service.py  question_service.py  round_service.py  score_service.py  settings_service.py  team_service.py  timer_service.py
src/quiz_meetup/ui/: __init__.py  icons.py  main_window.py  projector_window.py  styles.py
src/quiz_meetup/ui/pages/: __init__.py  control_page.py  games_page.py  media_page.py  questions_page.py  rounds_page.py  scores_page.py  settings_page.py  teams_page.py
