[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-meetup"
version = "0.1.0"
description = "Локальное desktop-приложение для проведения квизов"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.gui-scripts]
quiz-meetup = "quiz_meetup.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quiz_meetup = ["assets/*.qss", "database/*.sql"]
